:sparkles: Get all tasks by admin
